--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "webpack-dev-server": "^4.7.4"
     },
     "dependencies": {
+        "intersection-observer": "^0.12.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-icons": "^4.3.1",
