--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "webpack-dev-server": "^4.7.4"
     },
     "dependencies": {
+        "@apollo/client": "^3.5.8",
+        "graphql": "^15.8.0",
         "intersection-observer": "^0.12.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
