--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "build": "webpack",
         "lint": "standard",
         "dev": "webpack-dev-server",
+        "serve:dev": "webpack --mode development && npx serve dist -s",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
