--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "@apollo/client": "^3.5.8",
         "graphql": "^15.8.0",
         "intersection-observer": "^0.12.0",
+        "prop-types": "^15.8.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-helmet": "^6.1.0",
