ADD PWA configuration example

--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
             "dest": "/$1.js"
         },
         {
+            "src": "(.*).png",
+            "dest": "/$1.png"
+        },
+        {
             "src": "(.*).json",
             "dest": "/$1.json"
         },
