--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
         "standard": "^16.0.4",
         "webpack": "^5.68.0",
         "webpack-cli": "^4.9.2",
-        "webpack-dev-server": "^4.7.4"
+        "webpack-dev-server": "^4.7.4",
+        "webpack-pwa-manifest": "^4.3.0",
+        "workbox-webpack-plugin": "^6.4.2"
     },
     "dependencies": {
         "@apollo/client": "^3.5.8",
