--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "lint": "standard",
         "dev": "webpack-dev-server",
         "serve:dev": "webpack --mode development && npx serve dist -s",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "cypress open"
     },
     "repository": {
         "type": "git",
@@ -26,6 +26,7 @@
         "@babel/preset-env": "^7.16.11",
         "@babel/preset-react": "^7.16.7",
         "babel-loader": "^8.2.3",
+        "cypress": "^9.5.0",
         "html-webpack-plugin": "^5.5.0",
         "standard": "^16.0.4",
         "webpack": "^5.68.0",
